02_deployment_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  namespace: demo-app
  labels:
    app: backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
    version: v1
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: demo-app
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - name: backend
        image: motarski/fake-service:v0.26.2
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v2
  namespace: demo-app
  labels:
    app: backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
    version: v2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: demo-app
  labels:
    app: backend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      containers:
      - name: backend
        image: motarski/fake-service:v0.26.2
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v3
  namespace: demo-app
  labels:
    app: backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
    version: v3
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v3
  namespace: demo-app
  labels:
    app: backend
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v3
  template:
    metadata:
      labels:
        app: backend
        version: v3
    spec:
      containers:
      - name: backend
        image: node:23-alpine
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
        volumeMounts:
        - name: backend-v3-code
          mountPath: /app/index.js
          subPath: index.js
        command: ["/bin/sh"]
        args:
        - -c
        - |
          apk add --no-cache nodejs npm mysql-client
          cd /app
          npm init -y
          npm install express mysql2
          node index.js
      volumes:
      - name: backend-v3-code
        configMap:
          name: backend-v3-code
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  namespace: demo-app
  labels:
    app: frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
    version: v1
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: demo-app
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: frontend
        image: motarski/fake-service:v0.26.2
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-v1
  namespace: demo-app
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    version: v1
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-v1
  namespace: demo-app
  labels:
    app: mysql
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      version: v1
  template:
    metadata:
      labels:
        app: mysql
        version: v1
    spec:
      containers:
      - name: mysql
        image: mysql:9.2.0
        ports:
          - name: http
            containerPort: 3306
            protocol: TCP
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-db-v1
  namespace: demo-app
  labels:
    app: neo4j-db
spec:
  ports:
  - port: 7474
    protocol: TCP
    targetPort: 7474
  selector:
    app: neo4j-db
    version: v1
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j-db-v1
  namespace: demo-app
  labels:
    app: neo4j-db
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j-db
      version: v1
  template:
    metadata:
      labels:
        app: neo4j-db
        version: v1
    spec:
      containers:
      - name: neo4j-db
        image: bitnami/neo4j:5.26.1
        ports:
          - name: http
            containerPort: 7474
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: demo-app
  labels:
    app: sleep
    service: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: motarski/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-v1-ingress
  namespace: demo-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-v1
            port:
              number: 8080
